packages/kyvernoPolicies/chart/tests/vpol/restrict-seccomp-cel/kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod-pod-level-unconfined
spec:
  securityContext:
    seccompProfile:
      type: Unconfined
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-container-unconfined
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      seccompProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-initcontainer-unconfined
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
  initContainers:
  - name: initcontainer01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      seccompProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-ephemeral-unconfined
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
  ephemeralContainers:
  - name: debug01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      seccompProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-seccomp
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-runtime-default
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      seccompProfile:
        type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-localhost
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
    securityContext:
      seccompProfile:
        type: Localhost
        localhostProfile: operator/default.json
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-pod-level-runtime-default
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-unconfined
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
        securityContext:
          seccompProfile:
            type: Unconfined
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment-runtime-default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
        securityContext:
          seccompProfile:
            type: RuntimeDefault
